# AI-Adoption-Dashboard

./: # 🚀 Streamlit to Plotly Dash Migration.txt  .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  ADOPTION_RATES_IMPLEMENTATION.md  AGENT3_INTEGRATION_SUMMARY.md  ALL_IMPORT_FIXES.md  ANALYST_VIEWS_STATUS.md  APPDEV.md  AUTOMATED_RESEARCH_INTEGRATION_GUIDE.md  Back up AI dashboard.txt  CHANGELOG.md  CLAUDE.md  CRITICAL_FIXES_COMPLETE.md  CRITICAL_FIXES_SUMMARY.md  CURRENT_STATUS.md  DATA_FILES_REQUIRED.md  DATA_INTEGRATION_STATUS.md  DEBUG_BROADCASTING_OPERATIONS.md  DEPENDENCY_TESTING_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIX_INSTRUCTIONS.md  DEPLOYMENT_IMPORT_FIX.md  DEPLOYMENT_STATUS_UPDATE.md  DUPLICATE_CALLBACK_FIX.md  ECONOMIC_MODELS_UPDATE_SUMMARY.md  ENVIRONMENT_SETUP.md  FINAL_MIGRATION_REPORT.md  FINAL_STANDARD_APPROACH_SUMMARY.md  FULL_MIGRATION_GUIDE.md  FULL_TEST_RESULTS.md  Feedback.md  GAP_ANALYSIS_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  MCKINSEY_INTEGRATION.md  MIGRATION_CHECKLIST.md  (+155 more)
.history/: app_20250705195956.py  app_20250705233550.py
Best Practice/: UX_UI.md
Feedback/: Feedback.md  Feedback_2.md  Feedback_3.md  Feedback_4.md  Feedback_5.md  Feedback_6.md
UI/: components.py
Utils/: __init__.py  chart_optimizer.py  data_validation.py  dataframe_processor.py  dataframe_safety.py  helpers.py  navigation.py  user_experience.py
accessibility/: ACCESSIBILITY_GUIDE.md  __init__.py  accessibility_audit.py  accessible_components.py  accessible_themes.py  integrate_accessibility.py
api/: __init__.py  app.py  audit_endpoints.py  auth.py  auth_endpoints.py  customization_endpoints.py  endpoints.py  export_endpoints.py  report_endpoints.py  websocket_server.py
assets/: custom.css
business/: __init__.py  causal_analysis.py  economic_scenarios.py  financial_calculations.py  governance.py  industry_models.py  labor_impact.py  metrics.py  policy_simulation.py  risk_assessment.py  roi_analysis.py  roi_calculator.py  scenario_engine_parallel.py  scenario_planning.py  strategy.py
callbacks/: __init__.py  data_callbacks.py  navigation_callbacks.py  performance_callbacks.py  view_callbacks.py  visualization_callbacks.py
components/: README.md  __init__.py  accessibility.py  charts.py  competitive_assessor.py  competitive_assessor_enhanced.py  dashboard_integration.py  economic_insights.py  economic_models.py  economic_validation.py  example_usage.py  guided_tour.py  integrated_comparison_view.py  key_takeaways.py  layouts.py  lazy_loading.py  mobile_responsive.py  persona_comparison.py  persona_dashboards.py  persona_navigation.py  progressive_disclosure.py  test_imports.py  themes.py  view_enhancements.py  widgets.py
config/: __init__.py  constants.py  settings.py
core/: __init__.py  error_handler.py  memory_manager.py  session_manager.py
data/: DASH_COMPATIBILITY_STATUS.md  README.md  __init__.py  advanced_analytics.py  automated_loaders.py  automated_research_scanner.py  comprehensive_research_integration.py  dashboard_integration.py  data_integration.py  data_integration_dash.py  data_manager.py  data_manager_backup.py  data_manager_dash.py  data_manager_original.py  geographic.py  integration.py  kedro_pipeline.py  loaders.py  models.py  models_simple.py  oecd_realtime.py  (+5 more)
(+1520 files in other folders)
